# bring-a-crew-bedrock

./: .gitignore  README.md  pyproject.toml
bring_a_crew_bedrock/: __init__.py  action_agent.py  inline_agent_utils.py  lambda_creator.py  learn_agent.ipynb  learn_bedrock_inline_agent.ipynb  learn_bedrock_multi_agent.ipynb  learn_llm.ipynb  run_orchestration.py  setup_logging.py
bring_a_crew_bedrock/lambdas/: lambda_function_caterer.py  lambda_function_facility.py  lambda_function_schedule.py  payload-caterer.json  payload-facility.json  payload-schedule.json
bring_a_crew_bedrock/team/: food_manager_action_agent.py  orchestration_agent.py  room_manager_action_agent.py  schedule_manager_action_agent.py
