[project]
name = "bring-a-crew-bedrock"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.37.23,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]

[tool.poetry]
packages = [{include = "bring_a_crew_bedrock", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
